<resources>
    <string name="app_name">Kroasiden 2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_volunteers">Volunteers</string>
    <string name="menu_events">Events</string>
    <string name="menu_manage_event">Manage Event</string>
    <string name="menu_unitlist">Unitlist</string>
    <string name="menu_event_logs">Event logs</string>
    <string name="nav_head_manager">Manager</string>
    <string name="kroalogo_desc">kroalogo</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="undertittel">Gøy på landet siden 1971</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_text">Signup</string>
    <string name="needaccount_text">Don\'t have an account?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="name_string"><u>Name</u></string>
    <string name="register_btn_text">Register</string>
    <string name="password_field_text">Password:</string>
    <string name="email_field_text">Email:</string>
    <string name="lname_field_text">Last name:</string>
    <string name="fname_field_text">First name:</string>
    <string name="info_string">Info:</string>
    <string name="phone_field_string">Phone:</string>


    <string-array name="event_titles">
        <item>Postgirobygget</item>
        <item>Åpen scene</item>
        <item>Anholt Live</item>
        <item>Quiz</item>
        <item>Klubb Kroa</item>
        <item>Karpe</item>
        <item>Åpen scene</item>
        <item>Quiz</item>
    </string-array>
    <string-array name="event_info">
        <item>Synger deg tilbake til sommeren 2019!</item>
        <item>Kom og vis frem dine skillz</item>
        <item>Anholt kommer med ukulele og random instrumenter</item>
        <item>Nå blir det Quiz, kom og vinn</item>
        <item>Mexican party, ta med egen sombrero</item>
        <item>Karpe kommer med nytt album!</item>
        <item>Kom og vis frem dine skillz</item>
        <item>Nå blir det Quiz, kom og vinn</item>
    </string-array>

    <array name="events_images">
        <item>@drawable/img_event</item>
    </array>

    <array name="worker_images">
        <item>@drawable/man_black</item>
        <item>@drawable/man_red</item>
    </array>

    <string-array name="volunteer_names">
        <item>Name nameson</item>
        <item>Bertil Bertelson</item>
        <item>Anne anka</item>
        <item>Kari kruus</item>
        <item>Fredrik frees</item>
        <item>Jan jansen</item>
        <item>Ola norman</item>

    </string-array>

    <string-array name="volunteer_roles">
        <item>Crew Manager</item>
        <item>Security Manager</item>
        <item>Volunteer</item>
        <item>Volunteer</item>
        <item>Bar Manager</item>
        <item>Technical Manager</item>
        <item>Volunteer Manager</item>

    </string-array>

    <string-array name="volunteer_emails">
        <item>nameson@kroa.no</item>
        <item>Bertelson@kroa.no</item>
        <item>anka@kroa.no</item>
        <item>kruus@kroa.no</item>
        <item>frees@kroa.no</item>
        <item>jansen@kroa.no</item>
        <item>norman@kroa.no</item>

    </string-array>

    <string-array name="volunteer_phones">
        <item>93823922</item>
        <item>54678891</item>
        <item>92834228</item>
        <item>32512534</item>
        <item>94282821</item>
        <item>83729283</item>
        <item>29398020</item>

    </string-array>

    <string-array name="volunteer_lastvolunteered">
        <item>21st January</item>
        <item>15th November</item>
        <item>Onsdag</item>
        <item>11th September</item>
        <item>6th September</item>
        <item>29th February</item>
        <item>Tirsdag i Juleuka</item>

    </string-array>


    <string name="welcome_username">Welcome, </string>
    <string name="p_last_volunteered">Last volunteered: </string>
    <string name="Confirmed_work">Your confirmed work days</string>
    <string name="working_event1">Oktoberfest</string>
    <string name="crew_type_bar">BAR</string>
    <string name="crew_type_crew">CREW</string>
    <string name="working_event2">Halloween</string>
    <string name="crew_type_security">Security</string>
    <string name="pending_event1">Postgirobygget</string>
    <string name="pending_event2">A-arrangement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Slash">/</string>
    <string name="security_label">Security</string>
    <string name="signup_label">Signup!</string>
    <string name="bar_label">Bar</string>
    <string name="technical_label">Technical</string>
    <string name="crew_label">Crew</string>
    <string name="man_black">man_black</string>
    <string name="man_red">man_red</string>
    <string name="man_blue">man_blue</string>
    <string name="man_yellow">man_yellow</string>

</resources>
