<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/kroalogo_desc"
        app:srcCompat="@drawable/kroalogofit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undertittel"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColorHint="#000000" />


    <EditText
        android:id="@+id/editText"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColorHint="#000000"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:background="@drawable/rounded_corner"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_text"
        android:layout_gravity="center"
        android:onClick="userLogin"
        android:background="@drawable/rounded_corner"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/needaccount_text"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn_text"
        android:layout_marginTop="7dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner"
        android:onClick="userRegister"/>

</LinearLayout>