<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="348dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cardBackgroundColor="@android:color/black">

                <ImageView
                    android:id="@+id/p_kroalogo"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/kroa_logo" />

                <TextView
                    android:id="@+id/p_welcome_toast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:padding="5dp"
                    android:text="@string/welcome_username"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/p_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="230dp"/>

                <TextView
                    android:id="@+id/p_last_volunteered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/p_last_volunteered"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/p_last_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="240dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cardBackgroundColor="@android:color/white">

                <ImageView
                    android:id="@+id/p_enhetlogo"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/enhet" />

                <TextView
                    android:id="@+id/p_spare_units"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:paddingVertical="15dp"
                    android:text="Spare units:"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/p_spared_units"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cardBackgroundColor="@android:color/white">

                <ImageView
                    android:id="@+id/p_times_worked_img"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/total" />

                <TextView
                    android:id="@+id/p_times_worked"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:paddingVertical="15dp"
                    android:text="Times worked:"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/p_worked"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cardBackgroundColor="@android:color/white">

                <ImageView
                    android:id="@+id/this_month_img"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/month" />

                <TextView
                    android:id="@+id/p_worked_this_month"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:lines="2"
                    android:paddingVertical="15dp"
                    android:text="Worked total this month:"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/p_monthly_worked"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cardBackgroundColor="@android:color/white">

                <ImageView
                    android:id="@+id/jippi_img"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/jippi" />

                <TextView
                    android:id="@+id/p_jippi_until"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:lines="2"
                    android:paddingVertical="15dp"
                    android:text="You have JIPPI until:"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/p_jippi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/darker_gray" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/p_confirmed_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:text="@string/Confirmed_work"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardBackgroundColor="#b8b8b8">

                        <TextView
                            android:id="@+id/confirmed_event_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/working_event1"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/time_event_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="5. October | 20.00 - 02:30" />

                        <TextView
                            android:id="@+id/crew_event_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="300dp"
                            android:layout_marginLeft="300dp"
                            android:text="@string/crew_type_bar"
                            android:textSize="30sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardBackgroundColor="#dedede">

                        <TextView
                            android:id="@+id/confirmed_event_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/working_event2"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/time_event_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="30. October | 20.00 - 02:30" />

                        <TextView
                            android:id="@+id/crew_event_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="300dp"
                            android:layout_marginLeft="300dp"
                            android:text="@string/crew_type_crew"
                            android:textSize="30sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pending_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:text="Pending work requests"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardBackgroundColor="#b8b8b8">

                        <TextView
                            android:id="@+id/pending_event_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/pending_event1"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/time_event_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="21. September | 20.00 - 02:30" />

                        <TextView
                            android:id="@+id/crew_event_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="300dp"
                            android:layout_marginLeft="300dp"
                            android:text="@string/crew_type_security"
                            android:textSize="30sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardBackgroundColor="#dedede">

                        <TextView
                            android:id="@+id/pending_event_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/pending_event2"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/time_event_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="15. October | 20.00 - 02:30" />

                        <TextView
                            android:id="@+id/crew_event_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="300dp"
                            android:layout_marginLeft="300dp"
                            android:text="@string/crew_type_crew"
                            android:textSize="30sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>